--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,18 +2,18 @@
 plugins{
     id 'com.android.application'
     id 'kotlin-android'
-   // id 'kotlin-android-extensions'
+    id 'kotlin-android-extensions'
     id 'kotlin-kapt'
 }
 
 
 android {
-    compileSdk 33
-    buildToolsVersion '33.0.0'
+    compileSdk 32
+
     defaultConfig {
         applicationId "com.example.foodorder"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 32
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -56,7 +56,4 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.android.support:design:28.0.0'
 }
